fix: fix long word bug with     'whitespace-normal [overflow-wrap:anywhere] hyphens-auto'

--- a/src/public/styles/build.css
+++ b/src/public/styles/build.css
@@ -390,8 +390,15 @@
     --tw-font-weight: var(--font-weight-light);
     font-weight: var(--font-weight-light);
   }
-  .wrap-anywhere {
+  .\[overflow-wrap\:anywhere\] {
     overflow-wrap: anywhere;
+  }
+  .hyphens-auto {
+    -webkit-hyphens: auto;
+    hyphens: auto;
+  }
+  .whitespace-normal {
+    white-space: normal;
   }
   .text-blue-400 {
     color: var(--color-blue-400);
